--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <input type="password" placeholder="password">   
             </div>
             <a href="https://marioeid65.github.io/mario-eid2/"><button class="login-btn">   LOGIN     </button></a>
-            <a href="#" class="forgot">forgo username/password</a>
+            <a href="#" class="forgot">forgot username/password</a>
             <div class="create">
                 <a href="#">create your Account</a>
                 <i class="ri-arrow-right-fill"></i>
